--- a/index.html
+++ b/index.html
@@ -22,15 +22,16 @@
         <div class="menu-logo">
           <a href="#">FlexBlog</a>
         </div>
+        
+        <nav class="menu-nav">
+          <ul>
+            <li><a href="#about">Sobre</a></li>
+            <li><a href="#products">Produtos</a></li>
+            <li><a href="#price">Preço</a></li>
+            <li><a href="#quality">Qualidade</a></li>
+          </ul>
+        </nav>
       </div>
-      <nav>
-        <ul>
-          <li><a href="#about">Sobre</a></li>
-          <li><a href="#products">Produtos</a></li>
-          <li><a href="#price">Preço</a></li>
-          <li><a href="#quality">Qualidade</a></li>
-        </ul>
-      </nav>
     </header>
     
     <h1 class="brief">Nossos valores e<br>Propriedades de CSS</h1>
