--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
     </header>
     
-    <h1 class="brief">Nossos valores e<br>Propriedades de CSS</h1>
+    <h1 class="brief">Nossos valores e<br>propriedades de CSS</h1>
     
     <section class="about" id="about">
       <div class="about-info">
