--- a/brafe_1_pure_css/index.html
+++ b/brafe_1_pure_css/index.html
@@ -29,14 +29,14 @@
 			<p>Direto das fazendas de Minas Gerais</p>
 		</main>
 
-		<section>
+		<section class="about">
 			<h2>Uma Mistura de</h2>
-			<div>
-				<div>
+			<div class="about-container">
+				<div class="about-item">
 					<img src="img/cafe-1.jpg">
 					<h3>amor</h3>
 				</div>
-				<div>
+				<div class="about-item">
 					<img src="img/cafe-2.jpg">
 					<h3>perfeição</h3>
 				</div>
