--- a/brafe_1_pure_css/index.html
+++ b/brafe_1_pure_css/index.html
@@ -45,26 +45,26 @@
 	aente quente, mas também pode ser consumido gelado. Ele é um estimulante, por possuir cafeína — geralmente 80 a 140 mg para cada 207 ml dependendo do método de preparação.</p>
 		</section>
 
-		<section>
-			<div>
-				<div>
-					<h2>Paulista</h2>
+		<section class="products">
+			<div class="products-container">
+				<div class="products-item">
+					<h2 class="products-paulista">Paulista</h2>
 					<p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo noutras regiões: o João Alberto Castelo Branco trouxe mudas do Pará</p>
 				</div>
-				<div>
-					<h2>Carioca</h2>
+				<div class="products-item">
+					<h2 class="products-carioca">Carioca</h2>
 					<p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo noutras regiões: o João Alberto Castelo Branco trouxe mudas do Pará</p>
 				</div>
-				<div>
-					<h2>Mineiro</h2>
+				<div class="products-item">
+					<h2 class="products-mineiro">Mineiro</h2>
 					<p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo noutras regiões: o João Alberto Castelo Branco trouxe mudas do Pará</p>
 				</div>
 			</div>
-			<a href="#">Saiba Mais</a>
+			<a class="products-btn" href="#">Saiba Mais</a>
 		</section>
 
-		<section>
-			<div>
+		<section class="places">
+			<div class="places-item">
 				<img src="img/botafogo.jpg" alt="Brafé unidade Botafogo">
 				<div>
 					<h2>Botafogo</h2>
@@ -73,7 +73,7 @@
 				</div>
 			</div>
 
-			<div>
+			<div class="places-item">
 				<img src="img/iguatemi.jpg" alt="Brafé unidade Iguatemi">
 				<div>
 					<h2>Iguatemi</h2>
@@ -82,7 +82,7 @@
 				</div>
 			</div>
 
-			<div>
+			<div class="places-item">
 				<img src="img/botafogo.jpg" alt="Brafé unidade Mineirão">
 				<div>
 					<h2>Mineirão</h2>
