--- a/brafe_1_grid/index.html
+++ b/brafe_1_grid/index.html
@@ -11,8 +11,8 @@
 	<body>
 		<header class="menu">
 			<div class="container">
-				<a class="menu-logo" href="#"><img src="img/brafe.png" alt="Brafé"></a>	
-				<nav class="menu-nav">
+				<a class="menu-logo grid-4" href="#"><img src="img/brafe.png" alt="Brafé"></a>	
+				<nav class="menu-nav grid-8">
 					<ul>
 						<li><a href="#">Sobre</a></li>
 						<li><a href="#">Produtos</a></li>
@@ -46,17 +46,17 @@
 
 		<section class="products">
 			<div class="container">
-				<div class="products-item">
+				<div class="products-item grid-4">
 					<h2 class="products-paulista">Paulista</h2>
 					<p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo noutras regiões: o João Alberto Castelo Branco trouxe mudas do Pará</p>
 				</div>
 				
-				<div class="products-item">
+				<div class="products-item grid-4">
 					<h2 class="products-carioca">Carioca</h2>
 					<p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo noutras regiões: o João Alberto Castelo Branco trouxe mudas do Pará</p>
 				</div>
 				
-				<div class="products-item">
+				<div class="products-item grid-4">
 					<h2 class="products-mineiro">Mineiro</h2>
 					<p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo noutras regiões: o João Alberto Castelo Branco trouxe mudas do Pará</p>
 				</div>
@@ -64,28 +64,34 @@
 			<a class="products-btn" href="#">Saiba Mais</a>
 		</section>
 
-		<section class="places container">
-			<div class="places-item">
-				<img src="img/botafogo.jpg" alt="Brafé unidade Botafogo">
-				<div>
+		<section class="places">
+			<div class="places-item container">
+				<div class="grid-6">
+					<img src="img/botafogo.jpg" alt="Brafé unidade Botafogo">
+				</div>
+				<div class="grid-6">
 					<h2>Botafogo</h2>
 					<p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo.</p>
 					<a href="#">Ver Mapa</a>
 				</div>
 			</div>
 
-			<div class="places-item">
-				<img src="img/iguatemi.jpg" alt="Brafé unidade Iguatemi">
-				<div>
+			<div class="places-item container">
+				<div class="grid-6">
+					<img src="img/iguatemi.jpg" alt="Brafé unidade Iguatemi">
+				</div>
+				<div class="grid-6">
 					<h2>Iguatemi</h2>
 					<p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo.</p>
 					<a href="#">Ver Mapa</a>
 				</div>
 			</div>
 
-			<div class="places-item">
-				<img src="img/botafogo.jpg" alt="Brafé unidade Mineirão">
-				<div>
+			<div class="places-item container">
+				<div class="grid-6">
+					<img src="img/botafogo.jpg" alt="Brafé unidade Mineirão">
+				</div>
+				<div class="grid-6">
 					<h2>Mineirão</h2>
 					<p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo.</p>
 					<a href="#">Ver Mapa</a>
@@ -96,11 +102,11 @@
 
 		<section class="newsletter">
 			<div class="container">
-				<div class="newsletter-info">
+				<div class="newsletter-info grid-6">
 					<h2>Assine Nossa Newsletter</h2>
 					<p>promoções e eventos mensais</p>
 				</div>
-				<form>
+				<form class="grid-6">
 					<label>E-mail</label>
 					<input type="text" placeholder="Digite seu e-mail">
 					<button type="submit">Enviar</button>
@@ -110,8 +116,10 @@
 
 		<footer class="footer">
 			<div class="container">
-				<p>Este é um projeto da Origamid. Mais em origamid.com<br>Praia de Botafogo, 300, 5º andar - Botafogo - Rio de Janeiro</p>
-				<img src="img/brafe.png" alt="Brafé">
+				<p class="grid-8">Este é um projeto da Origamid. Mais em origamid.com<br>Praia de Botafogo, 300, 5º andar - Botafogo - Rio de Janeiro</p>
+				<div class="grid-4">
+					<img src="img/brafe.png" alt="Brafé">
+				</div>
 			</div>
 		</footer>
 
